[gd_scene load_steps=157 format=2]

[ext_resource path="res://components/golem/Golem.gd" type="Script" id=1]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00043.png" type="Texture" id=2]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00046.png" type="Texture" id=3]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00005.png" type="Texture" id=4]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00009.png" type="Texture" id=5]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00018.png" type="Texture" id=6]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00038.png" type="Texture" id=7]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00011.png" type="Texture" id=8]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00042.png" type="Texture" id=9]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00001.png" type="Texture" id=10]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00017.png" type="Texture" id=11]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00029.png" type="Texture" id=12]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00034.png" type="Texture" id=13]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00008.png" type="Texture" id=14]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00016.png" type="Texture" id=15]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00010.png" type="Texture" id=16]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00013.png" type="Texture" id=17]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00020.png" type="Texture" id=18]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00021.png" type="Texture" id=19]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00007.png" type="Texture" id=20]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00022.png" type="Texture" id=21]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00023.png" type="Texture" id=22]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00024.png" type="Texture" id=23]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00025.png" type="Texture" id=24]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00004.png" type="Texture" id=25]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00032.png" type="Texture" id=26]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00036.png" type="Texture" id=27]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00037.png" type="Texture" id=28]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00003.png" type="Texture" id=29]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00039.png" type="Texture" id=30]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00040.png" type="Texture" id=31]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00044.png" type="Texture" id=32]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00014.png" type="Texture" id=33]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00019.png" type="Texture" id=34]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00026.png" type="Texture" id=35]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00012.png" type="Texture" id=36]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00030.png" type="Texture" id=37]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00035.png" type="Texture" id=38]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00000.png" type="Texture" id=39]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00027.png" type="Texture" id=40]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00033.png" type="Texture" id=41]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00002.png" type="Texture" id=42]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00015.png" type="Texture" id=43]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00031.png" type="Texture" id=44]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00041.png" type="Texture" id=45]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00045.png" type="Texture" id=46]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00028.png" type="Texture" id=47]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00047.png" type="Texture" id=48]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00006.png" type="Texture" id=49]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00001.png" type="Texture" id=50]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00000.png" type="Texture" id=51]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00048.png" type="Texture" id=52]
[ext_resource path="res://components/golem/sprites/red/idle/00-Golem-Boss-IDLE_00049.png" type="Texture" id=53]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00003.png" type="Texture" id=54]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00002.png" type="Texture" id=55]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00030.png" type="Texture" id=56]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00048.png" type="Texture" id=57]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00032.png" type="Texture" id=58]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00044.png" type="Texture" id=59]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00029.png" type="Texture" id=60]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00045.png" type="Texture" id=61]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00031.png" type="Texture" id=62]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00046.png" type="Texture" id=63]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00027.png" type="Texture" id=64]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00034.png" type="Texture" id=65]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00037.png" type="Texture" id=66]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00036.png" type="Texture" id=67]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00040.png" type="Texture" id=68]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00041.png" type="Texture" id=69]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00043.png" type="Texture" id=70]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00049.png" type="Texture" id=71]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00028.png" type="Texture" id=72]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00038.png" type="Texture" id=73]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00042.png" type="Texture" id=74]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00024.png" type="Texture" id=75]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00039.png" type="Texture" id=76]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00047.png" type="Texture" id=77]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00033.png" type="Texture" id=78]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00026.png" type="Texture" id=79]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00035.png" type="Texture" id=80]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00025.png" type="Texture" id=81]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00038.png" type="Texture" id=82]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00006.png" type="Texture" id=83]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00016.png" type="Texture" id=84]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00010.png" type="Texture" id=85]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00021.png" type="Texture" id=86]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00036.png" type="Texture" id=87]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00037.png" type="Texture" id=88]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00042.png" type="Texture" id=89]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00035.png" type="Texture" id=90]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00043.png" type="Texture" id=91]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00028.png" type="Texture" id=92]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00047.png" type="Texture" id=93]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00003.png" type="Texture" id=94]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00032.png" type="Texture" id=95]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00024.png" type="Texture" id=96]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00031.png" type="Texture" id=97]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00001.png" type="Texture" id=98]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00004.png" type="Texture" id=99]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00015.png" type="Texture" id=100]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00030.png" type="Texture" id=101]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00005.png" type="Texture" id=102]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00020.png" type="Texture" id=103]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00012.png" type="Texture" id=104]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00005.png" type="Texture" id=105]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00007.png" type="Texture" id=106]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00044.png" type="Texture" id=107]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00006.png" type="Texture" id=108]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00009.png" type="Texture" id=109]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00000.png" type="Texture" id=110]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00018.png" type="Texture" id=111]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00033.png" type="Texture" id=112]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00004.png" type="Texture" id=113]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00008.png" type="Texture" id=114]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00013.png" type="Texture" id=115]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00014.png" type="Texture" id=116]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00041.png" type="Texture" id=117]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00009.png" type="Texture" id=118]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00046.png" type="Texture" id=119]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00011.png" type="Texture" id=120]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00022.png" type="Texture" id=121]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00029.png" type="Texture" id=122]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00023.png" type="Texture" id=123]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00034.png" type="Texture" id=124]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00039.png" type="Texture" id=125]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00007.png" type="Texture" id=126]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00048.png" type="Texture" id=127]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00025.png" type="Texture" id=128]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00049.png" type="Texture" id=129]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00002.png" type="Texture" id=130]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00012.png" type="Texture" id=131]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00017.png" type="Texture" id=132]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00015.png" type="Texture" id=133]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00016.png" type="Texture" id=134]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00014.png" type="Texture" id=135]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00045.png" type="Texture" id=136]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00013.png" type="Texture" id=137]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00017.png" type="Texture" id=138]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00040.png" type="Texture" id=139]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00008.png" type="Texture" id=140]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00010.png" type="Texture" id=141]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00019.png" type="Texture" id=142]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00011.png" type="Texture" id=143]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00026.png" type="Texture" id=144]
[ext_resource path="res://components/golem/sprites/red/laser/00-Golem-Boss-LASER_00027.png" type="Texture" id=145]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00021.png" type="Texture" id=146]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00022.png" type="Texture" id=147]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00023.png" type="Texture" id=148]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00018.png" type="Texture" id=149]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00019.png" type="Texture" id=150]
[ext_resource path="res://components/golem/sprites/red/smash/00-Golem-Boss-SMASH_00020.png" type="Texture" id=151]
[ext_resource path="res://scenes/03_game/white.png" type="Texture" id=152]
[ext_resource path="res://components/healthbar/Healthbar.tscn" type="PackedScene" id=153]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 200, 200 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 39 ), ExtResource( 10 ), ExtResource( 42 ), ExtResource( 29 ), ExtResource( 25 ), ExtResource( 4 ), ExtResource( 49 ), ExtResource( 20 ), ExtResource( 14 ), ExtResource( 5 ), ExtResource( 16 ), ExtResource( 8 ), ExtResource( 36 ), ExtResource( 17 ), ExtResource( 33 ), ExtResource( 43 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 34 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 35 ), ExtResource( 40 ), ExtResource( 47 ), ExtResource( 12 ), ExtResource( 37 ), ExtResource( 44 ), ExtResource( 26 ), ExtResource( 41 ), ExtResource( 13 ), ExtResource( 38 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 7 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 45 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 32 ), ExtResource( 46 ), ExtResource( 3 ), ExtResource( 48 ), ExtResource( 52 ), ExtResource( 53 ) ],
"loop": true,
"name": "red-idle",
"speed": 25.0
}, {
"frames": [ ExtResource( 51 ), ExtResource( 50 ), ExtResource( 55 ), ExtResource( 54 ), ExtResource( 113 ), ExtResource( 102 ), ExtResource( 83 ), ExtResource( 126 ), ExtResource( 114 ), ExtResource( 109 ), ExtResource( 85 ), ExtResource( 143 ), ExtResource( 104 ), ExtResource( 115 ), ExtResource( 116 ), ExtResource( 100 ), ExtResource( 84 ), ExtResource( 132 ), ExtResource( 111 ), ExtResource( 142 ), ExtResource( 103 ), ExtResource( 86 ), ExtResource( 121 ), ExtResource( 123 ), ExtResource( 96 ), ExtResource( 128 ), ExtResource( 144 ), ExtResource( 145 ), ExtResource( 92 ), ExtResource( 122 ), ExtResource( 101 ), ExtResource( 97 ), ExtResource( 95 ), ExtResource( 112 ), ExtResource( 124 ), ExtResource( 90 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 82 ), ExtResource( 125 ), ExtResource( 139 ), ExtResource( 117 ), ExtResource( 89 ), ExtResource( 91 ), ExtResource( 107 ), ExtResource( 136 ), ExtResource( 119 ), ExtResource( 93 ), ExtResource( 127 ), ExtResource( 129 ) ],
"loop": false,
"name": "red-laser",
"speed": 20.0
}, {
"frames": [ ExtResource( 110 ), ExtResource( 98 ), ExtResource( 130 ), ExtResource( 94 ), ExtResource( 99 ), ExtResource( 105 ), ExtResource( 108 ), ExtResource( 106 ), ExtResource( 140 ), ExtResource( 118 ), ExtResource( 141 ), ExtResource( 120 ), ExtResource( 131 ), ExtResource( 137 ), ExtResource( 135 ), ExtResource( 133 ), ExtResource( 134 ), ExtResource( 138 ), ExtResource( 149 ), ExtResource( 150 ), ExtResource( 151 ), ExtResource( 146 ), ExtResource( 147 ), ExtResource( 148 ), ExtResource( 75 ), ExtResource( 81 ), ExtResource( 79 ), ExtResource( 64 ), ExtResource( 72 ), ExtResource( 60 ), ExtResource( 56 ), ExtResource( 62 ), ExtResource( 58 ), ExtResource( 78 ), ExtResource( 65 ), ExtResource( 80 ), ExtResource( 67 ), ExtResource( 66 ), ExtResource( 73 ), ExtResource( 76 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 74 ), ExtResource( 70 ), ExtResource( 59 ), ExtResource( 61 ), ExtResource( 63 ), ExtResource( 77 ), ExtResource( 57 ), ExtResource( 71 ) ],
"loop": false,
"name": "red-smash",
"speed": 25.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 85, 300 )

[node name="Golem" type="Area2D"]
script = ExtResource( 1 )

[node name="Healthbar" parent="." instance=ExtResource( 153 )]
margin_left = 78.0
margin_top = -396.0
margin_right = 78.0
margin_bottom = -396.0
rect_rotation = 90.0
rect_scale = Vector2( 0.3, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -201 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 257
position = Vector2( 2, -230 )
frames = SubResource( 2 )
animation = "red-laser"
frame = 45

[node name="SmashTimer" type="Timer" parent="."]

[node name="LaserTimer" type="Timer" parent="."]

[node name="StageDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StageDetector"]
position = Vector2( -745, -168 )
shape = SubResource( 3 )

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="HurtLight" type="Light2D" parent="."]
position = Vector2( -6, -138 )
texture = ExtResource( 152 )
color = Color( 0.890196, 0.317647, 0.462745, 1 )
energy = 0.0
mode = 2
range_item_cull_mask = 256

[node name="Tween" type="Tween" parent="HurtLight"]

[node name="HarvesterTween" type="Tween" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="area_entered" from="StageDetector" to="." method="_on_StageDetector_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
